# beacon

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.ja.md  README.md  TODO.md  high-level-design.md  pyproject.toml
.githooks/: pre-commit  pre-push
cmd/: generate_assets.py  generate_pir.py  generate_schemas.py  stix_from_report.py  submit_for_review.py  update_taxonomy.py  validate_pir.py  web_app.py
docs/: context_template.md  data-model.ja.md  data-model.md  dependencies.ja.md  dependencies.md  sage_integration.md  setup.ja.md  setup.md  structure.ja.md  structure.md
docs/ja/: context_template.md  data-model.md  dependencies.md  sage_integration.md  setup.md  structure.md
schema/: asset_tags.json  business_context.schema.json  content_ja.json  pir_output.schema.json  threat_taxonomy.json  trigger_keywords.json
src/beacon/: config.py
src/beacon/analysis/: asset_mapper.py  assets_generator.py  element_extractor.py  pir_clusterer.py  risk_scorer.py  threat_mapper.py
src/beacon/generator/: pir_builder.py  report_builder.py
tests/: conftest.py  test_assets_generator.py  test_context_parser_md.py  test_element_extractor.py  test_github_review.py  test_llm_client.py  test_pir_builder.py  test_pir_clusterer.py  test_report_builder.py  test_report_reader.py  test_risk_scorer.py  test_sage_client.py  test_sage_compatibility.py  test_stix_extractor.py  test_threat_mapper.py  test_update_taxonomy.py  test_web_app.py
tests/fixtures/: sample_context_finance.md  sample_context_manufacturing.json  sample_misp_galaxy.json  sample_stix_bundle.json
(+16 files in other folders)
