[project]
name = "beacon"
version = "0.7.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "google-genai>=1.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "cryptography>=46.0.7",  # CVE-2026-39892 fix; transitive via google-genai/uvicorn
    "markitdown[pdf]>=0.1.0",  # PDF/URL → clean Markdown for stix_from_report.py
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real Vertex AI (deselect with -m 'not integration')",
]
